# roboflow

./: .env.template  .gitignore  Agents.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  INFERENCE_GUIDE.md  README.md  VERSION_TRACKING.md  WEB_UPLOAD_GUIDE.md  inference_model.py  pyproject.toml  setup_yolov11.sh  view_history.py
app/core/: config.py  logging_util.py  model_detector.py  roboflow_client.py  uploader.py  version_manager.py  versioning.py
app/ui/: main_window.py
roboflow_uploader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: bootstrap_macos.sh  macos-launcher.command  run_app.sh
